0.24
 - Fix SYNOPSIS section in doc.

0.23 2024-03-04T11:52:32+01:00
 - Add check_number_range().
 - Move error test in tests of check_number() to the end.
 - Rewrite check_angle() to new check_number_range().

0.22 2024-02-11T23:29:01+01:00
 - Add check_length_fix().
 - Add information about module version for checks in doc.

0.21 2024-02-03T11:53:31+01:00
 - Add Mo::utils::CSS to SEE ALSO section in doc.
 - Add tests for error parameters.
 - Fix test for check_array_object().
 - Improve error check for check_array_object().
 - Move code for check of object to helper.
 - Update copyright years.

0.20 2023-11-12T12:29:40+01:00
 - Add check_angle().
 - Fix error sentence for check_number() in doc.
 - Remove obsolete argument in check_number() in tests.

0.19 2023-08-21T19:30:10+02:00
 - Fix check_array_required(). It's required.
 - Regen README file.

0.18 2023-08-21T19:15:45+02:00
 - Add check_array_required().
 - Add missing check for key to check_array_object().
 - Improve ERROR section in doc for better check_array_object().

0.17 2023-07-09T12:51:58+02:00
 - Add check_regexp() function.

0.16 2023-07-05T13:56:20+02:00
 - Add check_string_begin() function.
 - Add Mo::utils::Language to SEE ALSO section in doc.
 - Add Wikibase::Datatype::Utils to SEE ALSO section in doc.
 - Fix indent in doc.
 - Fix SYNOPSIS section in doc.

0.15 2023-06-10T18:35:55+02:00
 - Add check_strings() subroutine.
 - Fix dependencies in doc.
 - Regen README file.
 - Update copyright years.
 - Update Module::Install to 1.21 version.

0.14 2022-09-28T18:17:25+02:00
 - Revert 0.13 version situation if key doesn't exist. It's not useful with
   Mo.

0.13 2022-09-27T19:36:15+02:00
 - Add another error for situation if key doesn't exists.
 - Add tests for undefined values.
 - Sort modules usage in tests.

0.12 2022-09-23T11:41:43+02:00
 - Add check_code().

0.11 2022-08-25T17:56:53+02:00
 - Regen README file.
 - Rename files in examples/ directory to better names.
