@@ -1,4 +1,5 @@
 0.24
+ - Add check_string().
  - Fix SYNOPSIS section in doc.
 
 0.23 2024-03-04T11:52:32+01:00
